collection section added and animation added

--- a/index.html
+++ b/index.html
@@ -88,6 +88,38 @@
 
         </section>
     </header>
+    <section id="collection-section">
+        <h2 class="collection-heading">Popular Collection</h2>
+        <div class="collection-items">
+            <div class="item1">
+                <img src="./images/tripod.png" alt="">
+            </div>
+            <div class="item2">
+                <img src="./images/mic.png" alt="">
+            </div>
+            <div class="item3">
+                <img src="./images/airpod.png" alt="">
+            </div>
+            <div class="item4">
+                <img src="./images/drone.png" alt="">
+            </div>
+            <div class="item5">
+                <img src="./images/lights.png" alt="">
+            </div>
+            <div class="item6">
+                <img src="./images/setup.png" alt="">
+            </div>
+            <div class="item7">
+                <img src="images/camera.png" alt="">
+            </div>
+            <div class="item8">
+                <img src="images/single-light.png" alt="">
+            </div>
+            <div class="item9">
+                <img src="images/action.png" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
