--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!-- tailwind link  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/4.1.13/lib.min.js"
+        integrity="sha512-LBqpfYKfymp3VEoHOQharES5j6UyXzUP0Td5jk5j1Ekm9tsbAoGUi5VaGA+0gdAlqKvAUb+7iFBe6qQQ7Jwk0Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <!-- tailwind css -->
+    <link rel="stylesheet" href="tailwind.css">
+
     <!-- style css -->
     <link rel="stylesheet" href="style.css">
 
@@ -91,32 +99,140 @@
     <section id="collection-section">
         <h2 class="collection-heading">Popular Collection</h2>
         <div class="collection-items">
-            <div class="item1">
+            <div class="card item1">
                 <img src="./images/tripod.png" alt="">
+                <h3>Flex Tripod</h3>
+                <p>$50.48</p>
+                <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    4.99
+                </div>
+                <p>Wordwide shifting available
+                    Buyersprotection possible!</p>
             </div>
-            <div class="item2">
+            <div class="card item2">
                 <img src="./images/mic.png" alt="">
+                <h3>Flex Tripod</h3>
+                <p>$50.48</p>
+                <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    4.99
+                </div>
+                <p>Wordwide shifting available
+                    Buyersprotection possible!</p>
             </div>
-            <div class="item3">
+            <div class="card item3">
                 <img src="./images/airpod.png" alt="">
+                <h3>Flex Tripod</h3>
+                <p>$50.48</p>
+                <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    4.99
+                </div>
+                <p>Wordwide shifting available
+                    Buyersprotection possible!</p>
             </div>
-            <div class="item4">
+            <div class="card item4">
                 <img src="./images/drone.png" alt="">
+                <h3>Flex Tripod</h3>
+                <p>$50.48</p>
+                <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    4.99
+                </div>
+                <p>Wordwide shifting available
+                    Buyersprotection possible!</p>
             </div>
-            <div class="item5">
+            <div class="card item5">
                 <img src="./images/lights.png" alt="">
+                <h3>Flex Tripod</h3>
+                <p>$50.48</p>
+                <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    4.99
+                </div>
+                <p>Wordwide shifting available
+                    Buyersprotection possible!</p>
             </div>
-            <div class="item6">
+            <div class="card item6">
                 <img src="./images/setup.png" alt="">
+                <h3>Flex Tripod</h3>
+                <p>$50.48</p>
+                <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    4.99
+                </div>
+                <p>Wordwide shifting available
+                    Buyersprotection possible!</p>
             </div>
-            <div class="item7">
+            <div class="card item7">
                 <img src="images/camera.png" alt="">
+                <h3>Flex Tripod</h3>
+                <p>$50.48</p>
+                <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    4.99
+                </div>
+                <p>Wordwide shifting available
+                    Buyersprotection possible!</p>
             </div>
-            <div class="item8">
+            <div class="card item8">
                 <img src="images/single-light.png" alt="">
+                <h3>Flex Tripod</h3>
+                <p>$50.48</p>
+                <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    4.99
+                </div>
+                <p>Wordwide shifting available
+                    Buyersprotection possible!</p>
             </div>
-            <div class="item9">
+            <div class="card item9">
                 <img src="images/action.png" alt="">
+                <h3>Flex Tripod</h3>
+                <p>$50.48</p>
+                <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    4.99
+                </div>
+                <p>Wordwide shifting available
+                    Buyersprotection possible!</p>
             </div>
         </div>
     </section>
