fixed card item

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- tailwind css -->
-    <link rel="stylesheet" href="tailwind.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+
 
     <!-- style css -->
     <link rel="stylesheet" href="style.css">
@@ -102,7 +103,7 @@
             <div class="card item1">
                 <img src="./images/tripod.png" alt="">
                 <h3>Flex Tripod</h3>
-                <p>$50.48</p>
+                <p class="rate">$50.48</p>
                 <div class="stars">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -111,13 +112,13 @@
                     <i class="fa-solid fa-star-half-stroke"></i>
                     4.99
                 </div>
-                <p>Wordwide shifting available
+                <p class="rate-details">Wordwide shifting<br>available<br>
                     Buyersprotection possible!</p>
             </div>
             <div class="card item2">
                 <img src="./images/mic.png" alt="">
                 <h3>Flex Tripod</h3>
-                <p>$50.48</p>
+                <p class="rate">$50.48</p>
                 <div class="stars">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -126,13 +127,13 @@
                     <i class="fa-solid fa-star-half-stroke"></i>
                     4.99
                 </div>
-                <p>Wordwide shifting available
+                <p class="rate-details">Wordwide shifting<br>available<br>
                     Buyersprotection possible!</p>
             </div>
             <div class="card item3">
                 <img src="./images/airpod.png" alt="">
                 <h3>Flex Tripod</h3>
-                <p>$50.48</p>
+                <p class="rate">$50.48</p>
                 <div class="stars">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -141,13 +142,13 @@
                     <i class="fa-solid fa-star-half-stroke"></i>
                     4.99
                 </div>
-                <p>Wordwide shifting available
+                <p class="rate-details">Wordwide shifting<br>available<br>
                     Buyersprotection possible!</p>
             </div>
             <div class="card item4">
                 <img src="./images/drone.png" alt="">
                 <h3>Flex Tripod</h3>
-                <p>$50.48</p>
+                <p class="rate">$50.48</p>
                 <div class="stars">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -156,13 +157,13 @@
                     <i class="fa-solid fa-star-half-stroke"></i>
                     4.99
                 </div>
-                <p>Wordwide shifting available
+                <p class="rate-details">Wordwide shifting<br>available<br>
                     Buyersprotection possible!</p>
             </div>
             <div class="card item5">
                 <img src="./images/lights.png" alt="">
                 <h3>Flex Tripod</h3>
-                <p>$50.48</p>
+                <p class="rate">$50.48</p>
                 <div class="stars">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -171,13 +172,13 @@
                     <i class="fa-solid fa-star-half-stroke"></i>
                     4.99
                 </div>
-                <p>Wordwide shifting available
+                <p class="rate-details">Wordwide shifting<br>available<br>
                     Buyersprotection possible!</p>
             </div>
             <div class="card item6">
                 <img src="./images/setup.png" alt="">
                 <h3>Flex Tripod</h3>
-                <p>$50.48</p>
+                <p class="rate">$50.48</p>
                 <div class="stars">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -186,13 +187,13 @@
                     <i class="fa-solid fa-star-half-stroke"></i>
                     4.99
                 </div>
-                <p>Wordwide shifting available
+                <p class="rate-details">Wordwide shifting<br>available<br>
                     Buyersprotection possible!</p>
             </div>
             <div class="card item7">
                 <img src="images/camera.png" alt="">
                 <h3>Flex Tripod</h3>
-                <p>$50.48</p>
+                <p class="rate">$50.48</p>
                 <div class="stars">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -201,13 +202,13 @@
                     <i class="fa-solid fa-star-half-stroke"></i>
                     4.99
                 </div>
-                <p>Wordwide shifting available
+                <p class="rate-details">Wordwide shifting<br>available<br>
                     Buyersprotection possible!</p>
             </div>
             <div class="card item8">
                 <img src="images/single-light.png" alt="">
                 <h3>Flex Tripod</h3>
-                <p>$50.48</p>
+                <p class="rate">$50.48</p>
                 <div class="stars">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -216,13 +217,13 @@
                     <i class="fa-solid fa-star-half-stroke"></i>
                     4.99
                 </div>
-                <p>Wordwide shifting available
+                <p class="rate-details">Wordwide shifting<br>available<br>
                     Buyersprotection possible!</p>
             </div>
             <div class="card item9">
                 <img src="images/action.png" alt="">
                 <h3>Flex Tripod</h3>
-                <p>$50.48</p>
+                <p class="rate">$50.48</p>
                 <div class="stars">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -231,9 +232,12 @@
                     <i class="fa-solid fa-star-half-stroke"></i>
                     4.99
                 </div>
-                <p>Wordwide shifting available
+                <p class="rate-details">Wordwide shifting<br>available<br>
                     Buyersprotection possible!</p>
             </div>
+        </div>
+        <div class="flex justify-end mt-20">
+            <p class="">see more <i class="fa-solid fa-arrow-right"></i></p>
         </div>
     </section>
 </body>
