--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             </div>
         </div>
         <div class="flex justify-end mt-20">
-            <p class="">see more <i class="fa-solid fa-arrow-right"></i></p>
+            <p class="see_more">see more <i class="fa-solid fa-arrow-right"></i></p>
         </div>
     </section>
 </body>
