--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     Buyersprotection possible!</p>
             </div>
         </div>
-        <div class="flex justify-end mt-20">
+        <div class="flex justify-end mt-20 w-full">
             <p class="see_more">see more <i class="fa-solid fa-arrow-right"></i></p>
         </div>
     </section>
